by Cynthia at 8/10/19:02 完成了入学必备的基本功能 todo：数据缓存&状态栏颜色

--- a/app/src/main/res/layout/freshman_activity_admission_request.xml
+++ b/app/src/main/res/layout/freshman_activity_admission_request.xml
@@ -33,8 +33,8 @@
                 android:id="@+id/tv_admission_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/admission_title"
-                android:textColor="@color/title_white"
+                android:text="@string/freshmen_admission_title"
+                android:textColor="@color/freshman_title_white"
                 android:textSize="18sp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
@@ -44,12 +44,12 @@
                 android:id="@+id/tv_admission_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/admission_edit"
+                android:text="@string/freshmen_admission_edit"
                 android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
-                android:textColor="@color/title_white"
+                android:textColor="@color/freshman_title_white"
                 android:layout_marginEnd="15dp"
                 android:layout_alignParentEnd="true"
                 tools:ignore="RelativeOverlap" />
@@ -90,8 +90,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:src="@drawable/freshman_icon_add"
-        app:rippleColor="@color/btn_blue"
-        app:backgroundTint="@color/btn_blue"
+        app:rippleColor="@color/freshman_btn_blue"
+        app:backgroundTint="@color/freshman_btn_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -113,18 +113,19 @@
             android:layout_toLeftOf="@id/btn_admission_sure"
             android:background="@drawable/freshman_shape_edit_border"
             android:inputType="text"
-            android:hint="@string/admission_add_hint"
-            android:textColorHint="@color/hint_black"
+            android:hint="@string/freshmen_admission_add_hint"
+            android:textColorHint="@color/freshmen_hint_black"
             android:textSize="14sp"
+            android:maxLength="14"
             tools:ignore="LabelFor" />
 
         <Button
             android:id="@+id/btn_admission_sure"
             android:layout_width="65dp"
             android:layout_height="36dp"
-            android:text="@string/admission_add"
+            android:text="@string/freshmen_admission_add"
             android:textSize="14sp"
-            android:textColor="@color/title_white"
+            android:textColor="@color/freshman_title_white"
             android:paddingLeft="17dp"
             android:paddingRight="17dp"
             android:background="@drawable/freshman_shape_btn_blue"
