--- a/app/src/main/res/drawable/freshman_bg_hint.xml
+++ b/app/src/main/res/drawable/freshman_bg_hint.xml
@@ -3,5 +3,5 @@
     <corners
         android:radius="5dp"/>
     <solid
-        android:color="@color/bg_white"/>
+        android:color="@color/freshman_bg_white"/>
 </shape>
