--- a/app/src/main/res/drawable/freshman_shape_btn_blue.xml
+++ b/app/src/main/res/drawable/freshman_shape_btn_blue.xml
@@ -3,5 +3,5 @@
     <corners
         android:radius="5dp"/>
     <solid
-        android:color="@color/btn_blue"/>
+        android:color="@color/freshman_btn_blue"/>
 </shape>
