--- a/app/src/main/res/drawable/freshman_shape_edit_border.xml
+++ b/app/src/main/res/drawable/freshman_shape_edit_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="@color/btn_blue"
+        android:color="@color/freshman_btn_blue"
         android:width="1dp"/>
     <corners
         android:radius="5dp"/>
