--- a/app/src/main/res/layout/freshman_activity_military_training.xml
+++ b/app/src/main/res/layout/freshman_activity_military_training.xml
@@ -6,10 +6,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_admission"
+        android:id="@+id/tb_military"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/freshman_bg_tb"
+        app:contentInsetStart="0dp"
         >
 
         <RelativeLayout
@@ -32,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/freshman_junxunteji"
-                android:textColor="@color/title_white"
+                android:textColor="@color/freshman_title_white"
                 android:textSize="18sp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
