--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,14 +4,14 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="title_white">#FEFEFF</color>
-    <color name="bg_white">#FFFFFF</color>
+    <color name="freshman_title_white">#FEFEFF</color>
+    <color name="freshman_bg_white">#FFFFFF</color>
 
-    <color name="btn_blue">#778FFA</color>
+    <color name="freshman_btn_blue">#778FFA</color>
 
-    <color name="shadow_black">#0D000000</color>
-    <color name="finish_black">#999</color>
-    <color name="title_black">#333</color>
-    <color name="container_text_black">#555</color>
-    <color name="hint_black">#B2B2B2</color>
+    <color name="freshmen_shadow_black">#0D000000</color>
+    <color name="freshmen_finish_black">#999</color>
+    <color name="freshmen_title_black">#333</color>
+    <color name="freshmen_container_text_black">#555</color>
+    <color name="freshmen_hint_black">#B2B2B2</color>
 </resources>
