--- a/app/src/main/res/layout/freshman_fragment_military_tips.xml
+++ b/app/src/main/res/layout/freshman_fragment_military_tips.xml
@@ -4,13 +4,16 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-        <android.support.v7.widget.CardView
+        <com.mredrock.cyxbs.freshman.ui.widget.JCardView
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
+            app:backgroundColor="@color/bg_white"
+            app:radius="5dp"
+            app:shadowColor="@color/shadow_black"
+            app:shadowRadius="5dp"
             android:layout_width="match_parent"
-            app:cardElevation="5dp"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -38,6 +41,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
 
 </ScrollView>
