--- a/app/src/main/res/layout/freshman_fragment_military_show.xml
+++ b/app/src/main/res/layout/freshman_fragment_military_show.xml
@@ -2,39 +2,45 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:text="军训图片"
+        android:text="@string/freshman_military_photo"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
         android:textColor="#000000"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/freshman_military_photo_rv"
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        android:id="@+id/freshman_military_banner"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_height="200dp"
+        app:canLoop="true"
+        >
 
-    </android.support.v7.widget.RecyclerView>
+    </com.bigkoo.convenientbanner.ConvenientBanner>
 
     <TextView
-        android:text="军训视频"
+        android:text="@string/freshman_military_video"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
         android:textColor="#000000"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/freshman_military_video_rv"
-
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="170dp">
 
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
