--- a/app/src/main/res/layout/freshman_activity_military_training.xml
+++ b/app/src/main/res/layout/freshman_activity_military_training.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/freshman_bg_tb"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.Toolbar
@@ -41,19 +43,25 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/freshman_military_tl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+   <LinearLayout
+       android:orientation="vertical"
+       android:background="@color/freshman_bg_white"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+       <android.support.design.widget.TabLayout
+           android:id="@+id/freshman_military_tl"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
 
-    </android.support.design.widget.TabLayout>
+       </android.support.design.widget.TabLayout>
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/freshman_military_vp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+       <android.support.v4.view.ViewPager
+           android:id="@+id/freshman_military_vp"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+       </android.support.v4.view.ViewPager>
+   </LinearLayout>
 
 </LinearLayout>
