by Cynthia at 8/11/17:58 完成了校园攻略的入口框架 修复测试的时候出现的bug

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="freshman_title_white">#FEFEFF</color>
     <color name="freshman_bg_white">#FFFFFF</color>
+    <color name="freshman_bg_phone">#FAFAFA</color>
 
     <color name="freshman_btn_blue">#778FFA</color>
 
