--- a/app/src/main/res/layout/freshman_activity_chat_online.xml
+++ b/app/src/main/res/layout/freshman_activity_chat_online.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    android:clipChildren="false"
     android:background="@drawable/freshman_bg_tb"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_military"
+        android:id="@+id/tb_chatOnline"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/freshman_bg_tb"
@@ -22,7 +21,7 @@
             >
 
             <ImageView
-                android:id="@+id/freshman_military_iv_back"
+                android:id="@+id/freshman_chatOnline_iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -32,10 +31,10 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/freshman_military_tv_title"
+                android:id="@+id/freshman_chatOnline_tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/freshman_junxunteji"
+                android:text="@string/freshman_chatoline"
                 android:textColor="@color/freshman_title_white"
                 android:textSize="18sp"
                 android:layout_centerInParent="true"
@@ -44,35 +43,25 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-   <LinearLayout
-       android:orientation="vertical"
-       android:background="#F6F6F6"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <com.mredrock.cyxbs.freshman.ui.widget.JCardView
-           app:hideRightShadow="true"
-           app:hideLeftShadow="true"
-           app:hideTopShadow="true"
-           app:hideBottomShadow="true"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <android.support.design.widget.TabLayout
-               android:id="@+id/freshman_military_tl"
-               app:tabSelectedTextColor="#54ACFF"
-               app:tabTextColor="#999999"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+    <LinearLayout
+        android:orientation="vertical"
+        android:background="@color/freshman_bg_white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/freshman_chatOnline_tl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-           </android.support.design.widget.TabLayout>
-       </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
+        </android.support.design.widget.TabLayout>
 
 
-       <android.support.v4.view.ViewPager
-           android:id="@+id/freshman_military_vp"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/freshman_chatOnline_vp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-       </android.support.v4.view.ViewPager>
-   </LinearLayout>
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
 
 </LinearLayout>
