--- a/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
+++ b/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
@@ -3,8 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/freshman_bg_tb"
     >
     <LinearLayout
+        android:background="@color/freshman_bg_white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
