--- a/app/src/main/res/layout/freshman_fragment_military_show.xml
+++ b/app/src/main/res/layout/freshman_fragment_military_show.xml
@@ -2,45 +2,107 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/freshman_military_show_video_parent1"
+    android:background="#F3F3F3"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/freshman_military_photo"
+    <com.mredrock.cyxbs.freshman.ui.widget.JCardView
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp" />
-
-    <com.bigkoo.convenientbanner.ConvenientBanner
-        android:id="@+id/freshman_military_banner"
         android:layout_width="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_height="200dp"
-        app:canLoop="true"
-        >
+        app:hideLeftShadow="true"
+        app:hideRightShadow="true"
+        app:hideBottomShadow="true"
+        app:hideTopShadow="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        app:radius="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:orientation="vertical"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="@string/freshman_military_photo"
+                android:layout_marginTop="12dp"
+                android:textColor="#333333"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:layout_width="wrap_content"
+                />
 
-    </com.bigkoo.convenientbanner.ConvenientBanner>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/freshman_military_show_photo_vp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="8"
+                android:paddingTop="12dp"
+                android:paddingRight="50dp"
+                android:paddingLeft="50dp"
+                android:paddingBottom="33dp"
+                android:clipToPadding="false"
+                >
+            </android.support.v4.view.ViewPager>
 
-    <TextView
-        android:text="@string/freshman_military_video"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp" />
+        </LinearLayout>
+    </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/freshman_military_video_rv"
+    <com.mredrock.cyxbs.freshman.ui.widget.JCardView
+        android:id="@+id/freshman_military_show_video_parent2"
         android:layout_width="match_parent"
-        android:layout_height="170dp">
+        android:layout_marginBottom="22dp"
+        app:hideLeftShadow="true"
+        app:hideRightShadow="true"
+        app:hideBottomShadow="true"
+        app:hideTopShadow="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:layout_marginTop="30dp"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    </android.support.v7.widget.RecyclerView>
+        <LinearLayout
+            android:id="@+id/freshman_military_show_video_parent3"
+            android:clipToPadding="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipChildren="false"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="@string/freshman_military_video"
+                android:textColor="#333333"
+                android:textSize="16sp" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/freshman_military_show_video_vp"
+                android:layout_width="match_parent"
+                android:paddingRight="100dp"
+                android:paddingLeft="100dp"
+                android:clipToPadding="false"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="8"
+                android:clipChildren="false">
+
+            </android.support.v4.view.ViewPager>
+
+
+        </LinearLayout>
+
+    </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
 </LinearLayout>
