--- a/app/src/main/res/layout/freshman_item_military_photo.xml
+++ b/app/src/main/res/layout/freshman_item_military_photo.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:id="@+id/freshman_military_photo_iv"
-        android:src="@drawable/ic_launcher_background"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp" />
-</LinearLayout>
+<android.support.v7.widget.CardView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    app:cardCornerRadius="10dp"
+    >
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/freshman_military_card_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:riv_corner_radius="10dp"
+            />
+
+        <TextView
+            android:id="@+id/freshman_military_card_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/freshman_military_tv_shape"
+            android:text="我是任务1"
+            android:textSize="14dp"
+            />
+
+</android.support.v7.widget.CardView>
