--- a/app/src/main/res/layout/freshman_item_military_video.xml
+++ b/app/src/main/res/layout/freshman_item_military_video.xml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-    <ImageView
-        android:id="@+id/freshman_military_video_iv"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-    android:src="@drawable/ic_launcher_background"
-    android:layout_width="wrap_content"
-    android:layout_height="150dp" />
+    <FrameLayout
+        android:id="@+id/freshman_military_video_frame"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+       >
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/freshman_military_video_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:foreground="@drawable/freshman_video_iv_shape"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_background"
+            app:riv_corner_radius="10dp" />
+
+        <Button
+            android:id="@+id/freshman_military_video_play"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/freshman_video_play" />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/freshman_military_video_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:layout_below="@+id/freshman_military_video_frame"
+        android:layout_gravity="center"
+        android:text="视频名称"
+        android:textSize="14sp"
+        />
 
 </LinearLayout>
