--- a/app/src/main/res/layout/freshman_activity_main.xml
+++ b/app/src/main/res/layout/freshman_activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/freshman_bg_tb"
     tools:context=".ui.activity.MainActivity">
 
     <!--为了适配，必须单独在背景基础上固定建筑的位置，所以这里就只能多一层LL-->
