--- a/app/src/main/res/layout/freshman_activity_admission_request.xml
+++ b/app/src/main/res/layout/freshman_activity_admission_request.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
-    android:background="@drawable/freshman_bg_tb"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/freshman_bg_tb"
     tools:context=".ui.activity.AdmissionRequestActivity">
 
         <android.support.v7.widget.Toolbar
@@ -14,7 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/freshman_bg_tb"
-            app:contentInsetStart="0dp">
+            android:minHeight="@dimen/abc_action_bar_default_height_material"
+            app:contentInsetStart="0dp"
+            tools:ignore="PrivateResource">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -37,6 +39,7 @@
                     android:layout_centerInParent="true"
                     android:layout_centerVertical="true"
                     android:text="@string/freshmen_admission_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:textColor="@color/freshman_title_white"
                     android:textSize="18sp" />
 
