by Cynthia at 8/13 代替f神上传了线上交流的部分 本人只是修改了一部分代码

--- a/app/src/main/res/layout/freshman_activity_campus_data_datail.xml
+++ b/app/src/main/res/layout/freshman_activity_campus_data_datail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/freshman_bg_tb"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.CampusDataDetailActivity">
+    tools:context=".ui.activity.campus.CampusDataDetailActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_data_detail"
