--- a/app/src/main/res/layout/freshman_activity_campus_strategy_entrance.xml
+++ b/app/src/main/res/layout/freshman_activity_campus_strategy_entrance.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@drawable/freshman_bg_tb"
-    tools:context=".ui.activity.CampusStrategyEntranceActivity">
+    tools:context=".ui.activity.campus.CampusStrategyEntranceActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_entrance"
