--- a/app/src/main/res/layout/freshman_recycle_item_entrance.xml
+++ b/app/src/main/res/layout/freshman_recycle_item_entrance.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mredrock.cyxbs.freshman.ui.widget.JCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:layout_marginEnd="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginStart="5dp"
     android:layout_marginTop="15dp"
+    android:gravity="center"
+    app:radius="5dp"
+    app:shadowRadius="6dp"
     tools:ignore="UseCompoundDrawables">
+
 
     <ImageView
         android:id="@+id/iv_grid_entrance"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/freshman_shape_circle"
-        android:scaleType="centerInside"
-        android:layout_gravity="center_horizontal"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/tv_grid_entrance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        tools:text="学生食堂"
-        android:textColor="@color/freshman_btn_blue"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
+        tools:ignore="ContentDescription" />
 
-</LinearLayout>
+
+</com.mredrock.cyxbs.freshman.ui.widget.JCardView>
