完成了军训特辑 修改了一些细节

--- a/app/src/main/res/drawable/freshman_shape_edit_border.xml
+++ b/app/src/main/res/drawable/freshman_shape_edit_border.xml
@@ -10,4 +10,6 @@
         android:left="12dp"
         android:right="12dp"
         android:top="12dp"/>
+    <solid
+        android:color="@color/freshman_bg_white"/>
 </shape>
