--- a/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
+++ b/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/freshman_CyMien_tv_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/freshman_cqupt_mien"
+                    android:text="@string/freshman_cy_mien"
                     android:textColor="@color/freshman_title_white"
                     android:textSize="18sp"
                     android:layout_centerInParent="true"
@@ -64,7 +64,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:background="@drawable/freshman_mien_btn"
-                    android:text="@string/freshman_mien_zuzhi"
+                    android:text="@string/freshman_student_group"
                     android:textColor="#FFFFFF"
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="35dp"
@@ -75,7 +75,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:textColor="#FFFFFF"
-                    android:text="@string/freshman_mine_huodong"
+                    android:text="@string/freshman_big_campaign"
                     android:background="@drawable/freshman_mien_btn"
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="35dp"
