修改了状态栏适配方案

--- a/app/src/main/res/layout/freshman_chatonline_fragment.xml
+++ b/app/src/main/res/layout/freshman_chatonline_fragment.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:id="@+id/freshman_chatonline_parent"
     android:orientation="vertical"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <EditText
@@ -11,23 +13,25 @@
         android:drawablePadding="10dp"
         android:lines="1"
         android:inputType="text"
-        android:background="@drawable/freshman_chatonline_shape"
+        android:background="@drawable/freshman_chat_online_shape"
         android:hint="@string/freshman_input_school_name"
         android:textSize="14sp"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingRight="10dp"
+        android:imeOptions="actionSearch"
+        android:singleLine="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:drawableStart="@drawable/freshman_icon_detail" />
 
     <ListView
         android:id="@+id/freshman_chatonline_lv"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
