--- a/app/src/main/res/drawable/freshman_chat_online_shape.xml
+++ b/app/src/main/res/drawable/freshman_chat_online_shape.xml
@@ -3,6 +3,8 @@
     <stroke android:width="1dp"
             android:color="#808080"
             />
+    <solid
+        android:color="#FFFFFF"/>
     <corners
         android:radius="10dp"/>
 </shape>
