--- a/app/src/main/res/layout/freshman_item_chatonline_lv.xml
+++ b/app/src/main/res/layout/freshman_item_chatonline_lv.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:textSize="14dp"
-    android:paddingTop="7dp"
-    android:paddingLeft="7dp"
-    android:paddingRight="7dp"
-    android:paddingBottom="7dp"
+    android:textSize="14sp"
+    android:paddingTop="17dp"
+    android:paddingLeft="17dp"
+    android:paddingRight="17dp"
+    android:paddingBottom="17dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:background="@drawable/freshman_chatonline_shape"
+    android:layout_gravity="center"
+    android:background="@drawable/freshman_chat_online_tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
