--- a/app/src/main/res/layout/freshman_activity_admission_request.xml
+++ b/app/src/main/res/layout/freshman_activity_admission_request.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_admission"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.AdmissionRequestActivity">
@@ -101,46 +102,4 @@
             app:rippleColor="@color/freshman_btn_blue" />
 
     </android.support.design.widget.CoordinatorLayout>
-
-    <RelativeLayout
-    android:id="@+id/rl_admission_add"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/freshman_bg_hint"
-    app:layout_constraintBottom_toBottomOf="parent">
-
-    <EditText
-        android:id="@+id/et_admission_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_toLeftOf="@id/btn_admission_sure"
-        android:background="@drawable/freshman_shape_edit_border"
-        android:hint="@string/freshmen_admission_add_hint"
-        android:inputType="text"
-        android:maxLength="14"
-        android:textColorHint="@color/freshmen_hint_black"
-        android:textSize="14sp"
-        tools:ignore="LabelFor" />
-
-    <Button
-        android:id="@+id/btn_admission_sure"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="65dp"
-        android:layout_height="36dp"
-        android:layout_alignBottom="@id/et_admission_add"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/et_admission_add"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/freshman_shape_btn_blue"
-        android:paddingLeft="17dp"
-        android:paddingRight="17dp"
-        android:text="@string/freshmen_admission_add"
-        android:textColor="@color/freshman_title_white"
-        android:textSize="14sp" />
-
-</RelativeLayout>
 </android.support.constraint.ConstraintLayout>
