--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,9 +5,11 @@
     <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_12">12dp</dimen>
     <dimen name="dp_14">14dp</dimen>
     <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_18">18dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_32">32dp</dimen>
@@ -18,6 +20,7 @@
     <dimen name="dp_108">108dp</dimen>
     <dimen name="dp_128">128dp</dimen>
     <dimen name="dp_144">144dp</dimen>
+    <dimen name="dp_toolbar_text_size">18dp</dimen>
 
     <dimen name="sp_8">8sp</dimen>
     <dimen name="sp_12">12sp</dimen>
