--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,13 @@
 
     <color name="freshman_btn_blue">#778FFA</color>
 
+    <color name="freshman_strategy_describe">#bf000000</color>
+    <color name="freshman_strategy_describe_light">#b2000000</color>
+    <color name="freshman_strategy_describe2">#cc000000</color>
+    <color name="freshman_strategy_describe2_light">#a5000000</color>
+    <color name="freshman_strategy_describe_money">#FF7979</color>
+    <color name="freshman_strategy_background">#f6f6f6</color>
+
     <color name="freshmen_shadow_black">#0D000000</color>
     <color name="freshmen_finish_black">#999</color>
     <color name="freshmen_title_black">#333</color>
