finish Cqupt Mien and Change the way of loading images

--- a/app/src/main/res/layout/freshman_activity_chat_online.xml
+++ b/app/src/main/res/layout/freshman_activity_chat_online.xml
@@ -49,6 +49,7 @@
         android:layout_height="match_parent">
         <android.support.design.widget.TabLayout
             android:id="@+id/freshman_chatOnline_tl"
+            app:tabSelectedTextColor="#8BA2EB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
