--- a/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
+++ b/app/src/main/res/layout/freshman_activity_cqupt_mien.xml
@@ -3,10 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/freshman_bg_tb"
     >
     <LinearLayout
-        android:background="@color/freshman_bg_white"
+        android:background="#f3f3f3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -29,9 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
                     android:src="@drawable/freshman_icon_back"
-                    android:layout_marginStart="15dp"
                     tools:ignore="ContentDescription" />
 
                 <TextView
@@ -47,48 +44,28 @@
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.Toolbar
-            android:animateLayoutChanges="true"
-            android:id="@+id/freshman_CyMien_tl"
+        <com.mredrock.cyxbs.freshman.ui.widget.JCardView
+            app:hideTopShadow="true"
+            app:hideLeftShadow="true"
+            app:hideRightShadow="true"
+            app:radius="0dp"
+            app:shadowColor="#DADADA"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize">
-            <LinearLayout
-                android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TabLayout
+                android:id="@+id/freshman_CyMien_tl"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="#8BA2EB"
+                app:tabBackground="@drawable/freshman_tablayout_select_transparent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="15dp"
-                >
-                <Button
-                    android:id="@+id/freshman_CyMien_btn_organization"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/freshman_mien_btn"
-                    android:text="@string/freshman_student_group"
-                    android:textColor="#FFFFFF"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginRight="35dp"
-                    android:layout_height="wrap_content" />
-                <Button
-                    android:id="@+id/freshman_CyMien_btn_campaign"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:textColor="#FFFFFF"
-                    android:text="@string/freshman_big_campaign"
-                    android:background="@drawable/freshman_mien_btn"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginRight="35dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </android.support.v7.widget.Toolbar>
+                android:layout_height="?actionBarSize">
 
-        <View
-            android:background="#F6F6F6"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"/>
+            </android.support.design.widget.TabLayout>
+        </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
+
 
         <com.mredrock.cyxbs.freshman.ui.adapter.CustomVIewPager
+            android:background="#F3F3F3"
             android:id="@+id/freshman_CyMien_vp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -96,21 +73,4 @@
         </com.mredrock.cyxbs.freshman.ui.adapter.CustomVIewPager>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/freshman_CyMien_close"
-        android:text="关闭"
-        android:layout_marginTop="100dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/freshman_CyMien_open"
-        android:text="展开"
-        android:visibility="gone"
-        android:layout_marginBottom="50dp"
-        android:layout_gravity="center|bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </FrameLayout>
