--- a/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu.xml
+++ b/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu.xml
@@ -5,18 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/freshman_CyMien_stu_tl"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="#8BA2EB"
-            app:tabTextColor="#000000"
-            app:tabIndicatorHeight="0dp"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize">
 
-        </android.support.design.widget.TabLayout>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/freshman_CyMien_stu_tl"
+                    app:tabMode="scrollable"
+                    app:tabGravity="center"
+                    app:tabPaddingStart="25dp"
+                    app:tabPaddingEnd="25dp"
+                    app:tabBackground="@drawable/freshman_tablayout_selector"
+                    app:tabIndicatorHeight="0dp"
+                    app:tabSelectedTextColor="#8BA2EB"
+                    app:tabTextColor="#000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize">
+
+                </android.support.design.widget.TabLayout>
 
         <android.support.v4.view.ViewPager
+            android:background="#F3F3F3"
             android:id="@+id/freshman_CyMien_stu_vp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
