--- a/app/src/main/res/layout/freshman_item_mien_act.xml
+++ b/app/src/main/res/layout/freshman_item_mien_act.xml
@@ -11,23 +11,42 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
+        app:shadowColor="#DADADA"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
+                app:riv_corner_radius="10dp"
                 android:id="@+id/freshman_CyMien_act_img"
                 android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/freshman_CyMien_act_tv"
-                android:text="这是简介"
+            android:id="@+id/freshman_CyMien_act_tv"
+            android:text="这是名字"
+            android:textSize="15sp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/freshman_CyMien_act_content"
+                android:text="这是内容"
                 android:textSize="14sp"
-                android:textColor="#000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
