--- a/app/src/main/res/layout/freshman_activity_main.xml
+++ b/app/src/main/res/layout/freshman_activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     android:background="@drawable/freshman_bg_tb"
     tools:context=".ui.activity.MainActivity">
 
@@ -17,6 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/freshman_icon_back"
             android:background="@drawable/freshman_bg_tb">
             <TextView
                 android:layout_width="wrap_content"
