--- a/app/src/main/res/layout/freshman_activity_strategy_same.xml
+++ b/app/src/main/res/layout/freshman_activity_strategy_same.xml
@@ -47,6 +47,7 @@
             android:id="@+id/rv_strategy"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="4dp"
             android:background="@color/freshman_strategy_background"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
