--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/freshman_btn_blue</item>
-
+        <item name="android:windowBackground">@null</item>
     </style>
 
     <style name="OverflowMenuTheme" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
