--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="colors">
-        <item>#33ccff</item>
-        <item>#3F51B5</item>
-        <item>#FF4081</item>
-        <item>#FF8247</item>
+        <item>#ff8cc8</item>
+        <item>#8cd8ff</item>
+        <item>#ff2b98</item>
+        <item>#00a9ff</item>
     </string-array>
 
     <string-array name="processes">
-        <item>83.4</item>
-        <item>37.9</item>
-        <item>90</item>
-        <item>57.6</item>
+        <item>29</item>
+        <item>71</item>
+    </string-array>
+
+    <string-array name="personNum">
+        <item>102</item>
+        <item>80</item>
+        <item>70</item>
+    </string-array>
+
+    <string-array name="subjects">
+        <item>大学物理</item>
+        <item>数据结构</item>
+        <item>高等数学</item>
+    </string-array>
+
+    <string-array name="gradualColors">
+        <item>#c59aff</item>
+        <item>#c2afff</item>
+        <item>#ff9daf</item>
+        <item>#ffb0bb</item>
+        <item>#9db4ff</item>
+        <item>#acc0ff</item>
     </string-array>
 </resources>
