--- a/app/src/main/res/layout/freshman_item_military_photo.xml
+++ b/app/src/main/res/layout/freshman_item_military_photo.xml
@@ -6,6 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     app:radius="10dp"
+    android:clipChildren="false"
     app:hideTopShadow="true"
     app:hideBottomShadow="true"
     app:hideLeftShadow="true"
@@ -29,6 +30,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:textColor="#FFFFFF"
+            android:lines="1"
             android:background="@drawable/freshman_military_tv_shape"
             android:text="我是任务1"
             android:textSize="14dp"
