--- a/app/src/main/res/layout/freshman_item_military_video.xml
+++ b/app/src/main/res/layout/freshman_item_military_video.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,7 +24,6 @@
             android:id="@+id/freshman_military_video_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
             android:foreground="@drawable/freshman_video_iv_shape"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
@@ -38,7 +37,7 @@
             android:background="@drawable/freshman_video_play" />
     </FrameLayout>
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/freshman_military_video_tv"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -46,6 +45,8 @@
         android:layout_below="@+id/freshman_military_video_frame"
         android:layout_gravity="center"
         android:text="视频名称"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMaxTextSize="14sp"
         android:textSize="14sp"
         />
 
